# leonhard

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/leonhard/: problem.hpp  problem_registrar.hpp  problems_container.hpp  problems_descriptions.hpp
mk/: build.mk  qmake.mk  subdir.mk
src/: main.cpp  problem.cpp  problem_0001.cpp  problem_registrar.cpp  problems_container.cpp  problems_descriptions.cpp
